--- a/src/sass/components/_grid.scss
+++ b/src/sass/components/_grid.scss
@@ -11,12 +11,16 @@
 	box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 	cursor: pointer;
 	flex-shrink: 0;
-	height: calc(#{$blockSize} * 2 - 4px);
+	height: calc(50vw - 20px);
 	justify-content: center;
 	margin: 2px;
 	overflow: hidden;
 	position: relative;
-	width: calc(#{$blockSize} * 2 - 4px);
+	width: calc(50vw - 20px);
+	@media(min-width: 600px) {
+		height: calc(#{$blockSize} * 2 - 4px);
+		width: calc(#{$blockSize} * 2 - 4px);
+	}
 	@media(min-width: 812px) {
 		height: calc(#{$blockSize} * 4 - 4px);
 		width: calc(#{$blockSize} * 4 - 4px);
