--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,6 +7,10 @@
 	top: 10px;
 	width: calc(#{$blockSize} * 2);
 	z-index: 2;
+	@media(max-width: 640px) {
+		height: calc(#{$blockSize} * 2 - 6px);
+		width: calc(#{$blockSize} * 2 - 6px);
+	}
 	&::after {
 		background: #FFF;
 		border-bottom: 3px solid grey;
@@ -25,8 +29,9 @@
 		border-radius: 3px;
 		overflow: hidden;
 		@media(max-width: 640px) {
-			left: -64px;
-			top: -30px;
+			border: 0;
+			left: -68px;
+			top: -34px;
 		}
 	}
 	&::before {
@@ -43,21 +48,19 @@
 		transform: rotateZ(-45deg);
 		width: 179px;
 		@media(max-width: 640px) {
-			left: -25px;
-			top: 62px;
+			left: -29px;
+			top: 60px;
 		}
 	}
 	.btn {
 		border: 0;
 		z-index: 4;
-		&#logo_btn, #search_btn {
-			background: none!important;
-			* {
-				left: 0;
-				padding: 0;
-				position: absolute;
-				top: 0;
-			}
+		&#logo_btn, &#search_btn {
+			align-items: center;
+			background: none;
+			display: flex;
+			justify-content: center;
+			padding: 0;
 			&:active, &:focus, &:hover {
 				* {
 					fill: $tealColor;
@@ -68,12 +71,20 @@
 			position: absolute;
 			left: 0;
 			top: 0;
+			* {
+				padding: 0;
+			}
 		}
 		&#search_btn {
 		  	opacity: 0.4;
-		  	position: fixed;
-			right: 32px;
-			top: 0;
+		  	position: absolute;
+			right: calc(0px - 100vw + 151px);
+			top: -9px;
+			@media(min-width: 600px) {
+				position: fixed;
+				right: 32px;
+				top: 0;
+			}
 			&:active,
 			&:focus,
 			&:hover {
