--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -31,7 +31,7 @@
 	article, footer {
 		display: flex;
 		flex-wrap: wrap;
-		margin: 60px auto;
+		margin: 55px auto;
 		//opacity: 0;
 		position: relative;
 		width: calc(#{$blockSize} * 2);
